# nova-can

./: .gitignore  DEV_ENV_SETUP.md  MICROCONTROLLER_DEV.md  README.md  pyproject.toml  requirements.txt  setup.py
dsdl_python_bindings_dir/nova_dsdl/: __init__.py
dsdl_python_bindings_dir/nova_dsdl/motor_driver/: __init__.py
dsdl_python_bindings_dir/nova_dsdl/sensors/: __init__.py
dsdl_python_bindings_dir/nova_dsdl/voltage_regulator/: __init__.py
dsdl_testing/: compose_result_to_dict  dsdl_dict.py  dsdl_inspect.py  generate_openmct.py  test_read_dsdl.py
examples/: CanMqttExample.py  Makefile  README.md  can_receiver_example.c  motor_driver_mock.c  msg_send_command.sh  publish_current_telemetry.sh  srv_rq_get_pid.sh  system_composition.json  system_example.yaml
examples/C_examples/: auto_gen.c  manual.c
examples/Systems/: system_example.yaml
examples/databases/: nova.db
examples/interfaces/: motor_driver.yaml  voltage_regulator.yaml
examples/shell/: can_db_test.sh  msg_send_command.sh  start_vcan.sh
examples/shell scripts/: srv_rq_set_pid.sh
examples/systems/: arm.yaml  chassis.yaml  system_example.yaml
spec/: compile_system.py  dsdl_test.py  mqtt_test.py  system_composition.json  systems_grouped.json
spec/dsdl/motor_driver/: ReadWritePIDConstant.1.0.dsdl
spec/interfaces/: VoltageRegulators.yaml  motor_driver.yaml  voltage_regulators.yaml
spec/protocol/latex/: Makefile  Nova-CAN-spec.tex
spec/schema/: device_interface.yaml  system_definition.yaml
spec/systems/: arm.yaml  chassis.yaml
src/c/: nova_can.h
src/python/nova_can/: communication.py  models.py
src/python/tooling/: start_vcan.sh
test/: Makefile  test_ncc.py
test/c/: test_canid.c
test/python/: __init__.py  run_tests.py
tooling/: ncc.py  requirements.txt  start_vcan.sh
tooling/NovaDSDL/: ncc.py
tooling/mqtt_handler/: can_mqtt_handler.py  can_tel.sh
tooling/ncc/: ncc.py
tooling/openMCT_system_compiler/: compile_system.py
(+57 files in other folders)
